--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  --navbar-color: #32a287;
+  --foreground-color: black;
+  --background-color: #f1ffe7;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* @media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-color: #B3C8CF;
+    --background-start-color: #B3C8CF;
+    --background-end-color: #B3C8CF;
+  }
+} */
+
+body {
+  color: var(--foreground-color);
+  background: var(--background-color);
+  font-family: 'Urbanist', sans-serif;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
 }
