Add Book Appointment page & Carousel

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --navbar-color: #32a287;
   --foreground-color: black;
   --background-color: #f1ffe7;
+  --link-color: #32a287;
 }
 
 /* @media (prefers-color-scheme: dark) {
