--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
 body {
   color: var(--foreground-color);
   background: var(--background-color);
-  font-family: 'Urbanist', sans-serif;
+  font-family: "Urbanist", sans-serif;
 }
 
 @layer utilities {
